--- a/style.css
+++ b/style.css
@@ -8,9 +8,12 @@
 .inter-font{
   font-family: "Inter", sans-serif;
 }
-
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+}
 body{
-    max-width: 100%;
+    max-width: 1600px;
     margin: 0 auto;
 }
 
@@ -81,6 +84,7 @@ header .nav-item ul li a{
 /* Hero Section Start */
 .hero-container{
     min-height: 760px;
+    height: auto;
     background: url(./assets/hero-bg.png);
     background-size: cover;
     background-position: center;
@@ -132,10 +136,9 @@ header .nav-item ul li a{
 }
 .hero-box p{
     font-size: 16px;
-    font-weight: 300;
+    opacity: 80%;
     color: #ffffff;
     margin-bottom: 24px;
-    opacity: 70%;
 }
 
 .hero-box .hero-btn{
@@ -162,6 +165,7 @@ header .nav-item ul li a{
 /* About Section Start */
 .about-section{
     min-height: 650px;
+    height: auto;
     background-color: #1A0B2E;
     
 }
@@ -191,10 +195,11 @@ header .nav-item ul li a{
     color: white;
 }
 .about-text p{
+    text-align: center;
     font-size: 16px;
     font-weight: 400;
     color: #ffffff;
-    line-height: 20px;
+    line-height: 40px;
     opacity: 70%;
 }
 .about-area hr{
@@ -231,6 +236,7 @@ header .nav-item ul li a{
 .choose-section{
   padding-top: 120px;
   min-height: 1125px;
+  height: auto;
   background-color: #230E3D;
 }
 .choose-section .choose-container{
@@ -273,15 +279,15 @@ header .nav-item ul li a{
 .card{
     background: rgba(53, 17, 101, 0.4);
     /* background: linear-gradient(135deg, #F7E93F,#FB09B4,#9100F8); */
-    border-radius: 40px;
+    border-radius: 20px;
     padding: 40px;
     min-height: 160px;
+    height: auto;
     display: flex;
     justify-content: center;
     flex-direction: column;
 }
 .card img{
-  
     width: 60px;
     height: auto;
     margin-bottom: 16px;
@@ -305,6 +311,7 @@ header .nav-item ul li a{
 .featured-section{
     padding-top: 120px;
     min-height: 1280px;
+    height: auto;
     background-color: #1A0B2E;
 }
 .featured-section h3{
@@ -324,7 +331,7 @@ header .nav-item ul li a{
 .featured-container .featured-card{
     width: 380px;
     height: 440px;
-    border-radius: 30px;
+    border-radius: 20px;
     overflow: hidden;
     background: rgba(53, 17, 101, 0.4);
 }
@@ -367,7 +374,7 @@ header .nav-item ul li a{
     margin: auto;
     max-width: 1200px;
     background: rgba(53, 17, 101, 0.4);
-    border-radius: 30px;
+    border-radius: 20px;
     height: auto;
     padding: 40px;
     display: flex;
@@ -423,10 +430,12 @@ header .nav-item ul li a{
 
 footer{
     min-height: 412px;
+    height: auto;
     background: url(./assets/footer-bg.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    overflow: hidden;
 }
 .footer-container{
     padding-top: 110px;
@@ -446,6 +455,7 @@ footer{
      background-clip: text;
 }
 .footer-container .reserve{
+    padding-top: 32px;
     padding-bottom: 120px;
     font-size: 16px;
     opacity: 60%;
@@ -454,6 +464,10 @@ footer{
 }
 .footer-container .footer-icon{
     padding-top: 25px;
+    /* margin-left: 20px;
+    margin-right: 20px;
+    display: grid;
+    grid-template-columns: repeat(4,1fr); */
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -464,8 +478,9 @@ footer{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 0 auto;
     gap: 6px;
-    padding-bottom: 32px;
+    /* padding-bottom: 32px; */
 } 
 .footer-container .footer-icon .footer-icon-item img{
     width: 24px;
@@ -480,3 +495,193 @@ footer{
 
 /* Footer Section End */
 
+/* Responsive for Mobile Devices */
+@media screen and (max-width: 576px) {
+    .header{
+        display: flex;
+        justify-content: space-around;
+    }
+    .logo{
+        width: 100%;
+        margin-left: 20px;
+    }
+    .nav-item{
+        display: none;
+    }
+    .header-button{
+        display: none;
+    }
+    .hamburger-icon{
+        display: block;
+        margin-right: 20px;
+        cursor: pointer;
+    }
+    .hero-container{
+        min-height: 466px;
+        height: auto;
+        width: 100%;
+        padding-bottom: 40px;
+        overflow: hidden;
+    }
+    .img-group{
+        width: 250px;
+        height: 250px;
+        margin-top: 40px;
+        margin-bottom: 24px;
+    }
+    .main-img{
+        width: 100%;
+        height: 100%;
+    }
+    .center-img{
+        width: 60px;
+        height: auto;
+    }
+    .badge{
+        top: 7px;
+        right: 1px;
+        padding: 8px 16px;
+        color: black;
+        border-radius: 20px;
+        font-size: 18px;
+        border: none;
+    }
+    .hero-box h2{
+        font-size: 40px;
+    }
+    .hero-box p{
+        max-width: 400px;
+        text-align: center;
+    }
+    .btn{
+        padding: 12px 20px;
+    }
+    .about-text{
+        margin: 0px 30px 20px 30px;
+    }
+    .about-text h3{
+        font-size: 32px;
+    }
+    .about-text br{
+        display: none;
+    }
+    .about-text p{
+        margin-bottom: 20px;
+        line-height: 25px;
+        text-align: justify;
+    }
+    .about-area hr{
+        margin-bottom: 40px;
+    }
+    .about-card{
+        padding: 0;
+        max-width: 400px;
+        margin-bottom: 40px;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        gap: 40px;
+    }
+    .about-card .cards h4{
+        font-size: 46px;
+    }
+    .choose-section{
+        padding-top: 40px;
+    }
+    .choose-container h2{
+        font-size: 32px;
+    }
+    .choose-container .choose-grid{
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: auto;
+        gap: 16px; 
+        padding-bottom: 40px;
+        grid-template-areas: 
+        "premium" 
+        "mobile"
+        "global"
+        "exclusive" 
+        "rich";
+    }
+    .card{
+        margin: 16px 20px 16px 20px;
+    }
+    .card h3{
+        font-size: 22px;
+    }
+    .featured-section{
+        padding-top: 40px;
+    }
+    .featured-section h3{
+        font-size: 32px;
+    }
+    .featured-section .featured-container{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 16px;
+        padding-bottom: 60px;
+        margin-bottom: 0px;
+    }
+    .featured-container .featured-card{
+        width: 500px;
+        height: 450px;
+        margin: 24px 20px 0px 20px;
+    }
+    .featured-container .featured-card iframe{
+        width: 500px;
+        height: 250px;
+    }
+    .featured-card h4{
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+    .featured-card p{
+        margin-bottom: 30px;
+        text-align: left;
+    }
+    .host-section{
+         padding-bottom: 40px;
+    }
+    .host-section h3{
+        font-size: 32px;
+        
+    }
+    .host-container{
+        max-width: 500px;
+       
+        flex-direction: column;
+    }
+    .host-details{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .host-details p{
+        text-align: center;
+    }
+    footer{
+        width: 100%;
+        min-height: 248px;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .footer-container{
+        margin-top: 120px;
+        max-width: 500px;
+        max-height: 180px;
+        padding: 40px 20px;
+    }
+    .footer-container h2{
+    font-size: 40px;
+    }
+    
+    .footer-icon{
+        max-width: 300px;
+        gap: 16px;
+        flex-wrap: wrap;
+    }
+}
