--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body{
     display: none;
 }
 .btn{
+    position: relative;
     padding: 12px 16px;
     font-size: 16px;
     font-weight: 600;
@@ -32,6 +33,37 @@ body{
     border-radius: 50px;
     cursor: pointer;
     background: linear-gradient(15deg,#F7E93F 20%,#FB09B4 55%,#9100F8 84%);
+    animation: breathe 4s ease-in-out infinite;
+    overflow: hidden;
+    will-change: transform;
+}
+/* Animation */
+.btn::before {
+    content: "";
+    position: absolute;
+    inset: -2px;
+    border-radius: inherit;
+    background: linear-gradient(90deg,
+        rgba(194, 180, 27, 0.65),
+        rgba(247, 233, 63, 0.55),
+        rgba(253, 12, 181, 0.932),
+        rgba(145, 0, 248, 0.40),
+        rgba(247, 233, 63, 0.65)
+    );
+    background-size: 240% 100%;
+    animation: softFlow 7s ease-in-out infinite;
+    filter: blur(0.8px);
+    z-index: -1;
+}
+@keyframes breathe {
+  0%, 100% { transform: scale(1); }
+  50% { transform: scale(1.04); }
+}
+
+@keyframes softFlow {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
 }
 
 .hero-normal-btn{
@@ -42,7 +74,16 @@ body{
     border: 1px solid #00FF88;
     background: transparent;
     border-radius: 50px;
+    cursor: pointer;
+    transition: all 0.5s ease-in-out;
 }
+
+.hero-normal-btn:hover{
+    box-shadow: 0 0 10px #00FF88, 0 0 10px #00FF88, 0 0 10px #00FF88;
+    transform: scale(1.05);
+}
+
+
 
 /* Header Section Start */
 header{
@@ -143,7 +184,7 @@ header .nav-item ul li a{
 
 .hero-box .hero-btn{
     display: flex;
-    gap: 8px;
+    gap: 20px;
 }
 
 .btn-herosec{
@@ -336,7 +377,9 @@ header .nav-item ul li a{
     display: flex;
     flex-direction: column;
     background: rgba(53, 17, 101, 0.4);
+    
 }
+
 .featured-card h4{
     font-size: 24px;
     font-weight: bold;
@@ -353,6 +396,8 @@ header .nav-item ul li a{
 .featured-card .video-time{
     display: flex;
     gap: 6px;
+    margin-top: auto;
+    margin-bottom: 20px;
     margin-left: 24px;
 }
 .video-time img{
@@ -365,6 +410,9 @@ header .nav-item ul li a{
 
 /* Features Section End */
 /* Host section Start */
+.host-section{
+    padding-bottom: 40px;
+}
 .host-section h3{
     font-size: 48px;
     font-weight: bold;
@@ -379,11 +427,15 @@ header .nav-item ul li a{
     border-radius: 20px;
     height: auto;
     padding: 40px;
+    border: none;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 20px;
+    position: relative;
+    overflow: visible;
 }
+
 .host-container .host-img{
     width: 200px;
     height: 200px;
@@ -635,7 +687,7 @@ footer{
         height: 250px;
     }
     .featured-card h4{
-        font-size: 20px;
+        font-size: 30px;
         margin-bottom: 15px;
     }
     .featured-card p{
@@ -654,8 +706,7 @@ footer{
         
     }
     .host-container{
-        max-width: 500px;
-       
+        max-width: 400px;
         flex-direction: column;
     }
     .host-details{
@@ -690,4 +741,29 @@ footer{
         gap: 16px;
         flex-wrap: wrap;
     }
+}
+
+@media screen and (min-width: 992px) and (max-width: 1250px){
+    .choose-container .choose-grid{
+        padding: 40px;
+    }
+    .featured-section .featured-container{
+        max-width: 990px;
+        gap: 30px;
+    }
+    .featured-container .featured-card{
+        width: 300px;
+        height: 520px;
+    }
+    .featured-container .featured-card iframe{
+        width: 300px;
+        height: 250px;
+    }
+    .host-section{
+        padding-bottom: 40px;
+    }
+    .host-container{
+        max-width: 990px;
+    }
+    
 }
