--- a/style.css
+++ b/style.css
@@ -611,7 +611,7 @@ footer{
         padding: 12px 20px;
     }
     .about-text{
-        margin: 0px 20px 20px 20px;
+        margin: 0px 50px 20px 50px;
     }
     .about-text h3{
         font-size: 32px;
@@ -629,12 +629,14 @@ footer{
     }
     .about-card{
         padding: 0;
+        margin-left: 20px;
+        margin-right: 20px;
         max-width: 400px;
         margin-bottom: 40px;
         display: flex;
         flex-wrap: wrap;
         align-items: center;
-        gap: 40px;
+        gap: 30px;
     }
     .about-card .cards h4{
         font-size: 46px;
@@ -707,6 +709,7 @@ footer{
     }
     .host-container{
         max-width: 400px;
+        margin-bottom: 40px;
         flex-direction: column;
     }
     .host-details{
